--- a/back/pom.xml
+++ b/back/pom.xml
@@ -126,6 +126,12 @@
 							<goal>check</goal>
 						</goals>
 						<configuration>
+							<excludes>
+								<exclude>**/dto/**</exclude>
+								<exclude>**/payload/**</exclude>
+								<exclude>**/models/**</exclude>
+								<exclude>**/exception/**</exclude>
+							</excludes>
 							<rules>
 								<rule>
 									<element>PACKAGE</element>
